err/twitterbot-farm.err
Listing '.'...
Listing './bin'...
Compiling './bin/tfctl.py'...
***   File "./bin/tfctl.py", line 26
    print dumps(Dictator(host=HOST).items(), indent=4, ensure_ascii=False)
              ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DAWG_Python-0.7.2.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dawg_python'...
Listing './lib/python3.5/site-packages/dictator'...
Listing './lib/python3.5/site-packages/dictator-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/oauthlib'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1/rfc5849'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1/rfc5849/endpoints'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/clients'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/endpoints'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/grant_types'...
Listing './lib/python3.5/site-packages/oauthlib-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymorphy2'...
Listing './lib/python3.5/site-packages/pymorphy2/opencorpora_dict'...
Listing './lib/python3.5/site-packages/pymorphy2/units'...
Listing './lib/python3.5/site-packages/pymorphy2-0.8.dist-info'...
Listing './lib/python3.5/site-packages/pymorphy2_dicts'...
Listing './lib/python3.5/site-packages/pymorphy2_dicts/data'...
Listing './lib/python3.5/site-packages/pymorphy2_dicts-2.4.393442.3710985.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_oauthlib'...
Listing './lib/python3.5/site-packages/requests_oauthlib/compliance_fixes'...
Listing './lib/python3.5/site-packages/requests_oauthlib-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tweepy'...
Listing './lib/python3.5/site-packages/tweepy-3.5.0.dist-info'...
Listing './lib/python3.5/site-packages/twitterbot_farm'...
Compiling './lib/python3.5/site-packages/twitterbot_farm/analyzer.py'...
***   File "./lib/python3.5/site-packages/twitterbot_farm/analyzer.py", line 19
    print "fetch..."
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twitterbot_farm-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/twitterbot_utils'...
Compiling './lib/python3.5/site-packages/twitterbot_utils/TwiAuth.py'...
***   File "./lib/python3.5/site-packages/twitterbot_utils/TwiAuth.py", line 13
    print u'export user_access_token=' + self.auth.access_token
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twitterbot_utils/TwiUtils.py'...
***   File "./lib/python3.5/site-packages/twitterbot_utils/TwiUtils.py", line 27
    print "get_maximum_tweets..."
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/twitterbot_utils/Twibot.py'...
***   File "./lib/python3.5/site-packages/twitterbot_utils/Twibot.py", line 55
    print 'bad tweet length'
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twitterbot_utils-0.1.13.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
